--- a/src/components/DmHeader/header.css
+++ b/src/components/DmHeader/header.css
@@ -7,23 +7,88 @@
 }
 .container {
   display: flex;
+  height: 100%;
 }
-@media (min-width: 376px) {
+
+.bell-menu {
+  display: none;
+}
+
+.list-menu {
+  display: block;
+  color: #283877;
+  font-weight: 600;
+}
+
+.username-header {
+  color: #283877;
+  font-weight: 600;
+}
+
+@media screen {
+  .header {
+    padding: 1rem;
+  }
+  .container {
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+  }
+  .bell-menu {
+    display: block;
+  }
+
+  .username-header {
+    display: none;
+  }
+}
+/* feat 4:  */
+/* iPhone 6-8: 375 * 667 像素 */
+@media screen and (min-width: 375px) {
+  /* 在这里添加你的样式规则 */
+  .header {
+    padding: 1rem;
+  }
+  .container {
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+  }
+  .bell-menu {
+    display: block;
+  }
+  .list-menu {
+    margin-right: 70%;
+  }
+  .username-header {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 414px) {
+  /* iPhone 8 Plus, iPhone X */
+}
+
+/* haven't to deal with 414~1225 */
+/* my screen 1342 * 564 works very well */
+@media (min-width: 1125px) {
   /* 在这里添加你的样式规则 */
   .container {
     align-items: center;
     gap: 2rem;
     justify-content: flex-end;
   }
-  /* 更多样式规则 */
-}
-
-@media (max-width: 376px) {
-  /* 在这里添加你的样式规则 */
-  .container {
-    justify-content: space-between;
-    align-items: center;
-    gap: 1rem;
+  .bell-menu {
+    display: block;
+  }
+  .list-menu {
+    display: none;
+  }
+  .username-header {
+    display: block;
+  }
+  .header {
+    padding: 0 9vw;
   }
   /* 更多样式规则 */
 }
