--- a/src/components/Row/row.css
+++ b/src/components/Row/row.css
@@ -1,15 +1,12 @@
 .dashboardContainer {
   border-radius: 6px;
-
   background-color: white;
   box-shadow: 0px 0px 0px 4px rgba(0, 0, 0, 0.01);
   height: 8vh;
-  /* border-left: 8px solid green; */
 }
 
 .circle {
   border-radius: 50%;
-  /* background-color: #ddd; */
   height: 28px;
   width: 28px;
   display: flex;
@@ -26,6 +23,7 @@
   color: #dd1457;
 }
 
+/* I dont think this color should be place here because grey is a more general color */
 .users {
   color: #383a37;
 }
