--- a/src/components/Row/row.css
+++ b/src/components/Row/row.css
@@ -1,4 +1,4 @@
-.dashboardContainer {
+.dashboard-one-row-container {
   border-radius: 6px;
   background-color: white;
   box-shadow: 0px 0px 0px 4px rgba(0, 0, 0, 0.01);
